force-app-metadata-removed/main/default/objects/CCG__c/CCG__c.object-meta.xml
<CustomObject>
    <label>CCG</label>
    <nameField>
        <label>CCG Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCGs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>