force-app-metadata-removed/main/default/objects/CCG__c/fields/CCG_Code__c.field-meta.xml
<CustomField>
    <fullName>CCG_Code__c</fullName>
    <externalId>true</externalId>
    <label>CCG Code</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>