force-app-metadata-removed/main/default/objects/CCG__c/fields/Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postcode__c</fullName>
    <label>Postcode</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>